--- a/app/globals.css
+++ b/app/globals.css
@@ -55,3 +55,31 @@
 .ql-code-block-container > .ql-ui option:hover {
   background-color: #2d3748; /* Fondo al pasar el ratón */
 }
+
+pre.ql-syntax {
+  background-color: #1a202c; /* Fondo oscuro */
+  color: white; /* Texto blanco */
+  padding: 1rem; /* Espaciado */
+  border: 1px solid #2d3748; /* Borde */
+  border-radius: 4px; /* Esquinas redondeadas */
+  overflow-x: auto; /* Barra de desplazamiento horizontal */
+}
+.ql-editor pre {
+  padding: 10px !important; /* Espaciado */
+}
+
+#editor-container {
+  height: 100%;
+  /* added these styles */
+  flex: 1;
+  display: flex; 
+  flex-direction: column;
+}
+
+#editor {
+  height: 100%;
+  /* added these styles */
+  flex: 1;
+  overflow-y: auto;
+  width: 100%;
+}
