--- a/app/components/CardSlider/styles.css
+++ b/app/components/CardSlider/styles.css
@@ -1,7 +1,5 @@
 .swiper {
   width: 240px;
-  /* height: 320px; */
-  /* width: calc(100vw - 10px); */
   @apply w-10/12 max-w-[500px];
 }
 
@@ -18,6 +16,7 @@
   font-weight: bold;
   color: #fff;
   width: 300px;
+  height: fit-content;
   @apply bg-gray-800;
 }
 /* 
